IMPORTANT COMMIT: configuring and enabling SECURE HTTP. Note: the password is masked in config.json and the (binary) key store file app/src/main/res/raw/mylocationkeystore01.p12 has been included in .gitignore file

--- a/app/src/main/res/raw/config.json
+++ b/app/src/main/res/raw/config.json
@@ -1,3 +1,4 @@
 {
-    "locationDataRemoteUrl" : "http://192.168.0.101:8091/api/locationdata"
+    "locationDataRemoteUrl": "https://192.168.0.101:8091/api/locationdata",
+    "keyStorePassword": "*****************"
 }
