--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     implementation 'com.android.support:design:27.1.1'
     testImplementation 'junit:junit:4.12'
+    testImplementation 'org.apache.logging.log4j:log4j-api:2.11.0'
+    testImplementation 'org.apache.logging.log4j:log4j-core:2.11.0'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     api 'net.devaction.mylocation:mylocation-api:1.0.0.0-SNAPSHOT:java7'
